--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,12 @@ dependencies:
   xml: ^6.5.0
   get: ^4.7.2
   geolocator: ^13.0.2
-  flutter_polyline_points: ^2.1.0
+  flutter_polyline_points: ^2.0.0
   google_maps_widget: ^1.0.6
   google_maps_flutter_platform_interface: ^2.11.1
   flutter_map_line_editor: ^7.0.0
   latlong2: ^0.9.1
+  dio: ^5.8.0+1
   # latlong2: ^0.9.1
 
 dev_dependencies:
